--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+RAJA_ONGKIR_API_KEY=api_key
+RAJA_ONGKIR_BASE_URL=https://rajaongkir.komerce.id/api/v1
+RAJA_ONGKIR_ORIGIN_CITY=63 # BEKASI
